--- a/retina-border.less
+++ b/retina-border.less
@@ -4,12 +4,12 @@
 	border: 1px solid @color;
 
 	@media 
-		only screen and (-webkit-min-device-pixel-ratio: 2), 
-		only screen and (min--moz-device-pixel-ratio: 2), 
-		only screen and (-o-min-device-pixel-ratio: 2/1), 
-		only screen and (min-device-pixel-ratio: 2), 
-		only screen and (min-resolution: 192dpi), 
-		only screen and ( min-resolution: 2dppx){ 
+		(-webkit-min-device-pixel-ratio: 2), 
+		(min--moz-device-pixel-ratio: 2), 
+		(-o-min-device-pixel-ratio: 2/1), 
+		(min-device-pixel-ratio: 2), 
+		(min-resolution: 192dpi), 
+		( min-resolution: 2dppx){ 
 		  
 			border: none;
 
@@ -37,12 +37,12 @@
 	border-top: 1px solid @color;
 
 	@media 
-		only screen and (-webkit-min-device-pixel-ratio: 2), 
-		only screen and (min--moz-device-pixel-ratio: 2), 
-		only screen and (-o-min-device-pixel-ratio: 2/1), 
-		only screen and (min-device-pixel-ratio: 2), 
-		only screen and (min-resolution: 192dpi), 
-		only screen and ( min-resolution: 2dppx){ 
+		(-webkit-min-device-pixel-ratio: 2), 
+		(min--moz-device-pixel-ratio: 2), 
+		(-o-min-device-pixel-ratio: 2/1), 
+		(min-device-pixel-ratio: 2), 
+		//only screen and (min-resolution: 192dpi), 
+		( min-resolution: 2dppx){ 
 		  
 			border: none;
 			background-image: linear-gradient(0deg, transparent, transparent 50%, @color 50%);
@@ -56,12 +56,12 @@
 		border-right: 1px solid @color;
 
 	@media 
-		only screen and (-webkit-min-device-pixel-ratio: 2), 
-		only screen and (min--moz-device-pixel-ratio: 2), 
-		only screen and (-o-min-device-pixel-ratio: 2/1), 
-		only screen and (min-device-pixel-ratio: 2), 
-		only screen and (min-resolution: 192dpi), 
-		only screen and ( min-resolution: 2dppx){ 
+		(-webkit-min-device-pixel-ratio: 2), 
+		(min--moz-device-pixel-ratio: 2), 
+		(-o-min-device-pixel-ratio: 2/1), 
+		(min-device-pixel-ratio: 2), 
+		(min-resolution: 192dpi), 
+		( min-resolution: 2dppx){ 
 		  
 			border: none;
 			background-image: linear-gradient(90deg, transparent, transparent 50%, @color 50%);
@@ -75,12 +75,12 @@
 		border-bottom: 1px solid @color;
 
 	@media 
-		only screen and (-webkit-min-device-pixel-ratio: 2), 
-		only screen and (min--moz-device-pixel-ratio: 2), 
-		only screen and (-o-min-device-pixel-ratio: 2/1), 
-		only screen and (min-device-pixel-ratio: 2), 
-		only screen and (min-resolution: 192dpi), 
-		only screen and ( min-resolution: 2dppx){ 
+		(-webkit-min-device-pixel-ratio: 2), 
+		(min--moz-device-pixel-ratio: 2), 
+		(-o-min-device-pixel-ratio: 2/1), 
+		(min-device-pixel-ratio: 2), 
+		(min-resolution: 192dpi), 
+		( min-resolution: 2dppx){ 
 		  
 			border: none;
 			background-image: linear-gradient(0deg, @color, @color 50%, transparent 50%);
@@ -94,12 +94,12 @@
 		border-left: 1px solid @color;
 
 	@media 
-		only screen and (-webkit-min-device-pixel-ratio: 2), 
-		only screen and (min--moz-device-pixel-ratio: 2), 
-		only screen and (-o-min-device-pixel-ratio: 2/1), 
-		only screen and (min-device-pixel-ratio: 2), 
-		only screen and (min-resolution: 192dpi), 
-		only screen and ( min-resolution: 2dppx){ 
+		(-webkit-min-device-pixel-ratio: 2), 
+		(min--moz-device-pixel-ratio: 2), 
+		(-o-min-device-pixel-ratio: 2/1), 
+		(min-device-pixel-ratio: 2), 
+		(min-resolution: 192dpi), 
+		( min-resolution: 2dppx){ 
 		  
 			border: none;
 			background-image: linear-gradient(90deg, @color, @color 50%, transparent 50%);
@@ -109,7 +109,17 @@
 	}
 }
 
-.no-retina-border{
-	border: none;
-	background-image: none;
+.no-retina-border(){
+	border: none !important;
+
+	@media 
+		(-webkit-min-device-pixel-ratio: 2), 
+		(min--moz-device-pixel-ratio: 2), 
+		(-o-min-device-pixel-ratio: 2/1), 
+		(min-device-pixel-ratio: 2), 
+		(min-resolution: 192dpi), 
+		( min-resolution: 2dppx){ 
+			border: none;
+			background: none;
+		}
 }
